# cyber-link

./: .gitignore  README.md  config.json  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: ha-realtime-state-filtering.md  ha-room-shutdown-delay.md  ha-shutdown-pending-automation.md  last-pc-ha-logic.md
docs/superpowers/plans/: 2026-04-17-ci-windows-build-fix.md  2026-04-18-card-only-window.md  2026-04-18-config-and-retry-separation.md  2026-04-18-packaging-title-cleanup.md  2026-04-18-remove-window-shell.md  2026-04-18-single-window-center-panel-plan.md  2026-04-18-startup-mode-separation.md  2026-04-18-windows-startup-fixes.md  2026-04-19-autostart-drag-fixed-off.md  2026-04-19-drag-console-startup-buttons.md  2026-04-19-fixed-size-drag-offline.md  2026-04-19-layout-tightening.md  2026-04-19-tray-double-click-open-window.md  2026-04-20-air-controller-style-ha-refactor.md  2026-04-21-ha-domain-internal-abstraction.md  2026-04-21-ha-entity-prefix-domain-plan.md  2026-04-22-pc-entity-gated-startup-shutdown.md  2026-04-22-startup-action-dedup.md  2026-04-22-windows-shutdown-pending-plan.md  2026-04-24-animation-resume.md
docs/superpowers/specs/: 2026-04-17-ci-windows-build-fix-design.md  2026-04-18-card-only-window-design.md  2026-04-18-config-and-retry-separation-design.md  2026-04-18-packaging-title-cleanup-design.md  2026-04-18-single-visible-surface-design.md  2026-04-18-startup-mode-separation-design.md  2026-04-18-windows-startup-fixes-design.md  2026-04-19-autostart-drag-fixed-off-design.md  2026-04-19-drag-console-startup-buttons-design.md  2026-04-19-fixed-size-drag-offline-design.md  2026-04-19-unified-app-log-design.md  2026-04-20-air-controller-style-ha-refactor-design.md  2026-04-22-multi-room-ha-shutdown-logic-design.md  2026-04-22-pc-entity-gated-startup-shutdown-design.md  2026-04-24-animation-resume-design.md  (+1 more)
scripts/: dev.ts
src/: App.tsx  animationPerformance.test.js  animationResume.test.js  appRuntime.test.ts  appRuntime.ts  appState.js  appState.test.js  appWindowBehavior.test.js  devLauncher.test.ts  devLauncher.ts  env.d.ts  haActions.test.ts  haActions.ts  index.css  initTimeout.js  initTimeout.test.js  lightingCards.test.ts  lightingCards.ts  refreshState.test.js  refreshingButton.test.js  runtimeMode.test.ts  runtimeMode.ts  shellRemoval.test.js  windowPause.test.ts  windowPause.ts  windowsReleaseRegression.test.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: action.rs  commands.rs  ha_client.rs  ha_events.rs  main.rs  models.rs  snapshot.rs  temperature.rs
src/shared/: windowSize.json
