[package]
name = "cyber-link"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
directories = "5"
tempfile = { version = "3", optional = true }

[features]
default = ["system-tray"]
system-tray = ["tauri/system-tray"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
tauri = { version = "1", features = ["system-tray", "api-all", "custom-protocol"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
] }
winreg = "0.50"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "cyber-link"
path = "src/main.rs"
